some early edits

--- a/front end/Web/css/webpage.css
+++ b/front end/Web/css/webpage.css
@@ -12,23 +12,29 @@ h3 {
   padding-bottom: 10px;
 }
 
-#usernameBox, #passwordBox {
+#usernameBox, #newUsername {
     max-width: 185px;
     height: 35px;
     font-size: 18px;
     padding-left: 12px;
 }
 
-#loginPage {
-  position: absolute;
+.passbox {
+  max-width: 185px;
+  height: 35px;
+  font-size: 18px;
+  padding-left: 12px;
+}
+
+#loginPage, #newAccPage{
+  position: fixed;
   margin: auto;
-  top: 0;
-  right: 0;
-  bottom: 0;
+  top: 30%;
   left: 0;
+  right: 0;
   padding: 15px;
   width: 200px;
-  height: 250px;
+  min-height: 250px;
 
   border-style: solid;
   border-radius: 2%;
