--- a/front end/Web/css/webpage.css
+++ b/front end/Web/css/webpage.css
@@ -28,12 +28,11 @@ h3 {
 
 #loginPage, #newAccPage{
   position: fixed;
-  margin: auto;
-  top: 30%;
-  left: 0;
-  right: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   padding: 15px;
-  width: 200px;
+  min-width: 200px;
   min-height: 250px;
 
   border-style: solid;
