--- a/contactmanager/core/templates/core/contact.html
+++ b/contactmanager/core/templates/core/contact.html
@@ -1,10 +1,10 @@
 {% extends 'core/base.html' %}
 
 {% block content %}
-	<p>Contact List</p>
+	<h2>Contact List</h2>
 	<ul>
 		{% for contact in contact_list %}
-			<li>{{ contact }}</li> 
+			<li><a href="{% url 'core:contact_detail_view' contact.id %}">{{ contact }}</a></li> 
 		{% endfor %}
 	</ul>
 	<a href="{% url 'core:create_new_contact' %}">Create A New Contact</a>
