--- a/contactmanager/core/templates/core/base.html
+++ b/contactmanager/core/templates/core/base.html
@@ -2,11 +2,14 @@
 <html>
 	<head>
 		<title>Contact Book</title>
-		<link rel="stylesheet" type="text/css" href="{% static 'contactmanager/style.css' %}" />
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
+		 crossorigin="anonymous">
+		<link rel="stylesheet" type="text/css" href="{% static 'core/style.css' %}" />
 	</head>
 	<body>
 		{% block content %} 
 		{% endblock %}
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src="{% static 'core/script.js' %}" type="text/javascript"></script>
 	</body>
 </html>
