--- a/front end/Web/css/webpage.css
+++ b/front end/Web/css/webpage.css
@@ -12,13 +12,19 @@ h3 {
   padding-bottom: 10px;
 }
 
-hr {
-  margin: auto;
-  width: 88%;
-  height: 2px;
-  background-color: grey;
-  box-shadow:  0 1px 2px 0 #000;
+p {
+  padding-top: 35px;
+  text-align: center;
 }
+
+hr {
+ margin: 0;
+ padding: 0;
+ border: 0;
+ height: 3px !important;
+ background: linear-gradient(to right, rgba(95,156,217,1) 0%, rgba(95,156,217,1) 33%, rgba(94,190,227,1) 33%, rgba(94,190,227,1) 66%, rgba(95,156,217,1) 66%, rgba(95,156,217,1) 100%);
+}
+
 .loginbox {
   display: block;
   margin: 5px auto;
@@ -30,18 +36,11 @@ hr {
   margin-bottom: 0px;
   padding-left: 12px;
 
-  box-shadow: inset 0 -3px 0 orange;
+
+  box-shadow: inset 0 -4px 3px -2px #5ebee3;
   outline-width: 0px;
   outline-style: solid;
   border-width: 0;
-}
-
-.subutton {
-
-}
-
-#useridsearchresults{
-
 }
 
 #btncontainer {
@@ -57,13 +56,12 @@ input[type="button"] {
   border-width: 0;
   background: transparent;
   margin-top: 4px;
+  outline: none;
 
-  font-size: 10px;
+  font-size: 12px;
   transition: .3s;
 }
 input[type="button"]:hover{
-  font-size: 14px;
-  font-weight: 550;
   color: #fff;
 
   background: lightblue;
@@ -86,13 +84,27 @@ input[type="button"]:hover{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 55px;
-  min-width: 200px;
-  min-height: 250px;
+  padding-top: 45px;
+  min-width: 350px;
+  min-height: 320px;
 
   background: rgba(255,255,255,1);
   box-shadow: 0 0 4px 2px rgba(5,5,5,0.2);
   border-width: 0;
+}
+
+#addDiv {
+
+  margin: -15px;
+  border: solid 0px #000;
+
+  box-shadow: inset 0 2px 4px -2px rgba(5,5,5,1);
+}
+
+#confirmBtn {
+  position: fixed;
+  bottom: 3%;
+  right: 10%;
 }
 
 .errorMsg {
