--- a/front end/Web/css/webpage.css
+++ b/front end/Web/css/webpage.css
@@ -9,7 +9,7 @@ h1 {
 }
 
 h3 {
-  text-align: center;
+  font-size: 16px;
   padding-bottom: 10px;
 }
 
@@ -66,7 +66,7 @@ input[type="button"] {
   outline: none;
 
   font-size: 12px;
-  transition: .3s;
+  transition: .4s;
 }
 input[type="button"]:hover{
   color: #fff;
@@ -111,18 +111,18 @@ input[type="button"]:hover{
 
   text-align: center;
   background: rgba(255,255,255,.9);
-  box-shadow: 0 0 4px 2px rgba(5,5,5,0.2);
+  box-shadow: 0 0 2px 2px rgba(5,5,5,0.3);
   border-width: 0;
 }
 
 #addDiv {
 
   margin: 0 auto;
-  margin-bottom: -24px;
-  padding-bottom: 30px;
+  margin-bottom: 42px;
   border: solid 0px #000;
   background-color: white;
   box-shadow: inset 0 2px 4px -2px rgba(5,5,5,1);
+  transition: .4s;
 }
 
 #confirmBtn {
