--- a/contactmanager/core/templates/core/base.html
+++ b/contactmanager/core/templates/core/base.html
@@ -1,7 +1,9 @@
 {% load static %}
 <html>
 	<head>
-		<title>Contact Book</title>
+		<title>Contact Manager</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
 		 crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="{% static 'core/style.css' %}" />
