--- a/contactmanager/core/templates/core/contact.html
+++ b/contactmanager/core/templates/core/contact.html
@@ -5,6 +5,11 @@
 	{% csrf_token %}
 	<input type="search" id="search" name="search" placeholder="Search contacts..." />
 	<ul id="search-results"></ul>
+	{% for contact in contact_list %}
+		<li>
+			<a href="{% url 'core:contact_detail_view' contact.id %}">{{ contact }}</a>
+		</li>
+	{% endfor %}
 	<a href="{% url 'core:create_new_contact' %}">Create A New Contact</a>
 	<a href="{% url 'core:logout_view' %}">Logout</a>
 {% endblock %}
