--- a/contactmanager/core/templates/core/base.html
+++ b/contactmanager/core/templates/core/base.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="{% static 'core/style.css' %}" />
 	</head>
 	<body>
+		<div id="ImgBkgrd"></div>
 		{% block content %} 
 		{% endblock %}
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
