--- a/contactmanager/core/templates/core/contactdetail.html
+++ b/contactmanager/core/templates/core/contactdetail.html
@@ -1,33 +1,38 @@
 {% extends 'core/base.html' %} 
 
 {% block content %}
-	<h2>Contact Detail</h2>
-	{% if error_message %}
-		<p>{{ error_message }}</p>
-	{% endif %}
-	<form method="POST">
-		{% csrf_token %}
-		<div>
-			<table>
-				<tr>
-					<td>Firstname</td>
-					<td>{{ contact.first_name }}</td>
-				</tr>
-				<tr>
-					<td>Lastname</td>
-					<td>{{ contact.last_name }}</td>
-				</tr>
-				<tr>
-					<td>Email</td>
-					<td>{{ contact.email }}</td>
-				</tr>
-				<tr>
-					<td>Phone number</td>
-					<td>{{ contact.phone_number }}</td>
-				</tr>
+	<div id="contact-detail-page">
+		<h3>Contact Detail</h3>
+		<hr>
+		<form method="POST">
+			{% csrf_token %}
+			<table class="table contact-detail-info">
+				<tbody>
+					<tr>
+						<th scope="row">Firstname</th>
+						<td>{{ contact.first_name }}</td>
+					</tr>
+					<tr>
+						<th scope="row">Lastname</th>
+						<td>{{ contact.last_name }}</td>
+					</tr>
+					<tr>
+						<th scope="row">Email</th>
+						<td>{{ contact.email }}</td>
+					</tr>
+					<tr>
+						<th scope="row">Phone number</th>
+						<td>{{ contact.phone_number }}</td>
+					</tr>
+				</tbody>
 			</table>
-		</div>
-		<input type="submit" value="Delete this contact" name="delete-contact" />
-		<a href="{% url 'core:contact_view' %}">Go Back</a>
-	</form>
+			<div class="contact-detail-buttons">
+				<input type="submit" value="Delete this contact" name="delete-contact" class="btn btn-danger"/>
+				<a href="{% url 'core:contact_view' %}" class="btn btn-primary">Go Back</a>
+			</div>	
+		</form>
+		{% if error_message %}
+			<span id="errorLI" class="errorMsg">{{ error_message }}</span>
+		{% endif %}
+	</div>
 {% endblock %}
