--- a/contactmanager/core/templates/core/newcontact.html
+++ b/contactmanager/core/templates/core/newcontact.html
@@ -1,50 +1,21 @@
 {% extends 'core/base.html' %} 
 
 {% block content %}
-	<h2>Create a new contact</h2>
-	<form method="POST">
-		{% csrf_token %}
-		<table>
-			<tr>
-				<td>
-					<lable for="firstNameBox">First Name</lable>
-				</td>
-				<td>
-					<input type="text" id="firstNameBox" name="firstname" size="23">
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<lable for="lastNameBox">Last Name</lable>
-				</td>
-				<td>
-					<input type="text" id="lastNameBox" name="lastname" size="23">
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<lable for="emailBox">Email</lable>
-				</td>
-				<td>
-					<input type="email" id="emailBox" name="email" size="23">
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<lable for="phonenumberBox">Phone Number</lable>
-				</td>
-				<td>
-					<input type="text" id="phonenumberBox" name="phonenumber" size="23">
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<input type="submit" value="Submit" id="loginButton">
-				</td>
-				<td>
-					<a href="{% url 'core:contact_view' %}">Go Back</a>
-				</td>
-			</tr>
-		</table>
-	</form>
+	<div id="new-contact-page">
+		<h3>Create a new contact</h3>
+		<hr>
+		<form method="POST">
+			{% csrf_token %}
+			<div class="new-contact-inputs">
+				<input type="text" id="firstNameBox" name="firstname" placeholder="Firstname" size="23" class="loginbox">
+				<input type="text" id="lastNameBox" name="lastname" placeholder="Lastname" size="23" class="loginbox">
+				<input type="email" id="emailBox" name="email" size="23" placeholder="Email" class="loginbox">
+				<input type="text" id="phonenumberBox" name="phonenumber" placeholder="Phone Number" size="23" class="loginbox">
+			</div>
+			<div class="new-contact-buttons">
+				<input type="submit" value="Submit" class="btn btn-success">
+				<a href="{% url 'core:contact_view' %}" class="btn btn-primary">Go Back</a>
+			</div>
+		</form>
+	</div>
 {% endblock %}
