--- a/contactmanager/core/templates/core/newuser.html
+++ b/contactmanager/core/templates/core/newuser.html
@@ -1,60 +1,22 @@
 {% extends 'core/base.html' %}
 
 {% block content %}
-	<div>
-		<h2>Create your new account</h2>
+	<div id="newAccPage">
+		<h3>Create your new account</h3>
+		<hr>
 		<form method="POST">
 			{% csrf_token %}
-			<table>
-				<tr>
-					<td>
-						<label for="usernameBox">Username</label>
-					</td>
-					<td>
-						<input type="text" id="usernameBox" name="username" size="23">
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<label for="passwordBox">Password</label>
-					</td>
-					<td>
-						<input type="password" id="passwordBox" name="password"  size="23">
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<lable for="emailBox">Email</lable>
-					</td>
-					<td>
-						<input type="email" id="emailBox" name="email" size="23">
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<lable for="firstNameBox">First Name</lable>
-					</td>
-					<td>
-						<input type="text" id="firstNameBox" name="firstname"  size="23">
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<lable for="lastNameBox">Last Name</lable>
-					</td>
-					<td>
-						<input type="text" id="lastNameBox" name="lastname" size="23">
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<input type="submit" value="Submit" id="loginButton">
-					</td>
-					<td>
-						<a href="{% url 'core:login_view' %}">Go Back</a>
-					</td>
-				</tr>
-			</table>
+			<div class="new-account-inputs">
+				<input type="text" id="usernameBox" name="username" placeholder="Username" size="23" class="loginbox">
+				<input type="password" id="passwordBox" name="password" placeholder="Password" size="23" class="loginbox">
+				<input type="email" id="emailBox" name="email" size="23" placeholder="Email" class="loginbox">
+				<input type="text" id="firstNameBox" name="firstname" placeholder="Firstname" size="23" class="loginbox">
+				<input type="text" id="lastNameBox" name="lastname" placeholder="Lastname" size="23" class="loginbox">
+			</div>
+			<div class="new-account-buttons">
+				<input type="submit" value="Submit" class="btn btn-success">
+				<a href="{% url 'core:login_view' %}" class="btn btn-primary">Go Back</a>
+			</div>
 		</form>
 	</div>
 {% endblock %}
